Добавление отступов в Команде

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         </h1>
         <button class="button">Заказать услугу</button>
       </section>
-      <div class="content">
-        <section class="information">
+
+      <section class="information">
+        <div class="content">
           <ul class="display">
             <li class="ahtung">
               <p class="headline">ВНИМАНИЕ К ДЕТАЛЯМ</p>
@@ -92,8 +93,9 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
+
       <div class="content">
         <section class="photo">
           <h2 class="headline headline-text">Чем мы занимаемся</h2>
@@ -127,9 +129,8 @@
         <div class="content">
           <h2 class="headline headline-text-team">Наша команда</h2>
           <ul class="display team-ul">
-            <li>
+            <li class="item-photo">
               <img
-                class="item-photo"
                 src="./img/ИгорьДемьяненко.jpg"
                 width="270"
                 height="260"
@@ -138,9 +139,8 @@
               <h3 class="headline">Игорь Демьяненко</h3>
               <p class="color-text">Product Designer</p>
             </li>
-            <li>
+            <li class="item-photo">
               <img
-                class="item-photo"
                 src="./img/ОльгаРепина.jpg"
                 width="270"
                 height="260"
@@ -149,9 +149,8 @@
               <h3 class="headline">Ольга Репина</h3>
               <p class="color-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item-photo">
               <img
-                class="item-photo"
                 src="./img/НиколайТарасов.jpg"
                 width="270"
                 height="260"
@@ -160,9 +159,8 @@
               <h3 class="headline">Николай Тарасов</h3>
               <p class="color-text">Marketing</p>
             </li>
-            <li>
+            <li class="item-photo">
               <img
-                class="item-photo"
                 src="./img/МихаилЕрмаков.jpg"
                 width="270"
                 height="260"
